# hydra-amm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: clmm.rs  constant_product.rs  dynamic.rs  hybrid.rs  order_book.rs  weighted.rs
src/: error.rs  lib.rs  prelude.rs
src/config/: amm_config.rs  clmm.rs  constant_product.rs  dynamic.rs  hybrid.rs  mod.rs  order_book.rs  weighted.rs
src/domain/: amount.rs  basis_points.rs  decimals.rs  fee_tier.rs  liquidity.rs  liquidity_change.rs  mod.rs  position.rs  price.rs  rounding.rs  swap_result.rs  swap_spec.rs  tick.rs  token.rs  token_address.rs  token_pair.rs
src/factory/: default_factory.rs  mod.rs
src/math/: checked.rs  fixed_precision.rs  float_precision.rs  mod.rs  precision.rs  rounding.rs  tick_math.rs
src/pools/: clmm.rs  constant_product.rs  dynamic.rs  hybrid.rs  mod.rs  order_book.rs  pool_box.rs  proptest_properties.rs  weighted.rs
src/traits/: from_config.rs  liquidity_pool.rs  mod.rs  swap_pool.rs
tests/: integration.rs
